Updated mobile navigation and fixed a minor layout issue

--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -15,7 +15,7 @@
 @media (max-width: 640px) {
   .carousel {
     position: relative;
-    margin-top: -55px;
+    //margin-top: -55px;
   }
 }
 
